# generative-art

./: .cursorrules  .gitignore  README.md  biome.json  index.html  main.ts  package.json  pyproject.toml  settings.ts  style.css
.cursor/rules/: p5js-webgl.mdc  project.mdc  typescript.mdc
2018-eyes-004/: eyes_004.pde
2018-generativos-antipi/: index.html  index.js  index.ts
III/: index.ts
algorithms/2018_antipi/: antipi.pde
algorithms/Circo/: index.ts
algorithms/III/: III.pde  index.ts
algorithms/abstracactact/: index.ts
algorithms/alfombra/: index.ts
algorithms/antipi/: index.ts
algorithms/arabe/: index.ts
algorithms/arboles/: index.ts
algorithms/arcos/: index.ts
algorithms/azulejos/: index.ts
algorithms/cables/: index.ts
algorithms/caretonga/: index.ts
algorithms/chea/: index.ts
algorithms/chime/: index.ts
algorithms/circlesAlpha/: circlesAlpha.pde
algorithms/circulos/: index.ts
algorithms/circulos2/: index.ts
algorithms/circulosFormas/: index.ts
algorithms/circulosdentrocirculos/: index.ts
algorithms/circulosdentrocirculos2/: index.ts
algorithms/circulosdete/: index.ts
algorithms/curdiculasdecuadrados/: index.ts
algorithms/eyes_001/: crt-screens.ts  index.ts  leaf.ts  spiral.ts
algorithms/eyes_002/: eyes_002.pde
algorithms/eyes_004/: index.ts
algorithms/golden/: index.ts
algorithms/helados/: index.ts
algorithms/hembras/: index.ts
algorithms/mondrian/: index.ts
algorithms/nippon-flower/: index.ts  variation1.ts
algorithms/oleone/: index.ts
algorithms/op_011/: op_011.pde
algorithms/op_012/: op_012.pde
algorithms/op_013/: op_013.pde
algorithms/op_014/: op_014.pde
antipi/: index.ts
data/: colorsPalettes.ts  colors_palettes.js  colors_palettes.ts
extract-dominant-colors/: main.py
extract-still-image/: main.py
extract_dominant_colors/: main.py  pyproject.toml
eyes_004/: index.ts
helpers/: canvasDimensions.ts  colorUtils.ts  index.ts  keyboardControls.ts  moviesPalettesApi.ts  saveImage.ts
mondrian/: index.ts
(+11 files in other folders)
