
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Adrien Carpentier", email = "me@adriencarpentier.com"},
]
dependencies = [
    "matplotlib>=3.7.1",
    "scipy>=1.9.3",
    "pandas>=2.0.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.275",
]
