[project]
name = "extract-dominant-colors"
version = "0.0.1"
description = "Extract dominant colors from an image"
authors = [
    {name = "Adrien Carpentier", email = "me@adriencarpentier.com"},
]
dependencies = [
    "matplotlib>=3.7.1",
    "pandas>=2.0.2",
    "scipy>=1.9.3",
    "tqdm>=4.67.1",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.ruff]
line-length = 100
lint = { extend-select = ["I"] }

[tool.uv]
dev-dependencies = ["ruff>=0.6.8",]
